# slambot_description

./: CMakeLists.txt  README.md  package.xml
launch/: description.launch  view.launch
meshes/: camera.stl  wheel.stl
rviz/: slam.rviz  urdf.rviz
urdf/: slambot.urdf.xacro
