<?xml version="1.0"?>
<package format="2">
  <name>slambot_description</name>
  <version>1.0.0</version>
  <description>
    3D models of the slambot.
  </description>

  <license>BSD</license>

  <maintainer email="Bafenijn@gmail.com">Bram Fenijn</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>roslaunch</test_depend>
  
</package>
